--- a/about.css
+++ b/about.css
@@ -9,7 +9,7 @@
     height: auto;
     background:  rgba(193,193,193,0.3); 
     border-radius: 5% 5%; 
-    font-family: KaiTi;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 23px;
     text-align: center;
 }
@@ -39,7 +39,9 @@
     padding-top: 2%;
 }
 #stay-info {
+    width: 80%;
     padding-top: 5%;
+
 }
 #stay-info p{
     position: relative;
