--- a/introduction.css
+++ b/introduction.css
@@ -10,7 +10,7 @@
     text-align: center;
     overflow-wrap: break-word;
     border-radius: 5% 5%;
-    font-family: KaiTi;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 
@@ -45,7 +45,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 23px;
     line-height: 50px;
-    text-align: center;
+    text-align: left;
 }
 table {
     position: relative;
@@ -58,7 +58,6 @@ table {
     width: 80%;
     margin-bottom: 10%;
 }
-
 #speaker p {
     position: relative;
     width: 90%;
