--- a/about.css
+++ b/about.css
@@ -2,24 +2,28 @@
     position: relative; 
     display: flex; 
     margin-top: 3%;
-    width: 80%;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: auto;
-    background:  rgba(193,193,193,0.3); 
+    /*background:  rgba(193,193,193,0.3); */
     border-radius: 5% 5%; 
-    font-family: KaiTi;
-    font-size: 23px;
+    font-family: Microsoft Yahei;
+    font-size: 19px;
     text-align: center;
 }
-#participation-method {
+#stay-info a {
+    color:wheat;
+}
+/*#participation-method {
     position: relative;
+    margin-top: 5%;
     padding-bottom: 10%;
 }
 #participation-method p{
     padding-top: 2%;
-}
+}*/
 /*#participation-method img{
     position: relative;
     width: 200px;
@@ -30,32 +34,46 @@
     padding-bottom: 10%; 
 }
 
+
 #register {
     position: relative;
-    margin-top: 10%;
-    padding-bottom: 5%;
+    margin-top: 5%;
+   
 }
-#register p {
-    padding-top: 2%;
+#register table {
+    width: 100%;
+}
+#register table caption {
+    font-size: 21px;
+    font-weight: bold;
+    color: wheat;
+}
+
+.table{
+    padding-bottom: 10%;
 }
 #stay-info {
-    padding-top: 5%;
+    margin-top: 5%;
 }
-#stay-info p{
-    position: relative;
-    padding-top: 1%;
-    padding-bottom: 10%;
+
+.stay-info {
+    width: 100%;
+}
+.method {
+    width: 100%;
 }
 #up2 {
     position: relative;
-    left: 50%;
-    transform: translate(-50% 0);
-    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 3%;
     border: 2px solid  rgb(54, 119, 231);
     width: 43px;
     height: 43px;
     border-radius: 50% 50%;
+    font-size: 15px;
     text-align: center;
 }
 /*
