--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
         font-size: 19px;
     }
 }
-@media screen and (max-width: 992px) and (min-width: 768px) {
+@media screen and (max-width: 1920px) and (min-width: 768px) {
     #main {
         width: 100%;
         text-align: center;
@@ -44,7 +44,7 @@ body {
         font-size: 22px;
     }
 }
-@media screen and (max-width: 1200px) and (min-width: 992px) {
+/* @media screen and (max-width: 1200px) and (min-width: 992px) {
     #main {
         width: 100%;
         text-align: center;
@@ -74,7 +74,7 @@ body {
     .container #main p:nth-child(3) {
         font-size: 25px;
     }
-}
+} */
 
 /*---*/
 ul {
