--- a/introduction.css
+++ b/introduction.css
@@ -1,17 +1,32 @@
 
 #introdution{
     position: absolute;
-    top: 15%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%,0%);
     width: 80%;
     height: auto; 
-   /* background: rgba(241,243,244,0.2);*/
+    background: rgba(241,243,244,0.2);
     text-align: center;
     overflow-wrap: break-word;
     border-radius: 5% 5%;
     font-family: Microsoft Yahei;
     
+}
+
+#introdution2{
+    position: relative;
+    margin-top: 10%;
+    display: table-cell;
+    vertical-align: middle;
+    margin: auto;
+    float: right;
+    width: 100%;
+    font-size: 20px;
+    color:wheat;
+    text-align: left;
+    line-height: 35px;
+    padding-top: 10px;
 }
 
 .introdution,.speaker,.main2 {
