--- a/introduction-CSAC-2020.css
+++ b/introduction-CSAC-2020.css
@@ -21,20 +21,6 @@
     line-height: 25px;
 }
 
-#introdution2{
-    position: relative;
-    margin-top: 10%;
-    display: table-cell;
-    vertical-align: middle;
-    margin: auto;
-    float: right;
-    width: 100%;
-    font-size: 15px;
-    color:wheat;
-    text-align: left;
-    line-height: 35px;
-    padding-top: 10px;
-}
 
 .introdution,.speaker,.main2 {
     display: flex;
@@ -65,7 +51,6 @@
     width: 80%;
     left: 8%;
     font-family: Microsoft Yahei;
-    font-size: 20px;
     line-height: 50px;
     text-align: center;
 }
@@ -101,14 +86,17 @@
 #contents {
     /*margin-left: 5%;*/
     position: relative;
-    font-size: 20px;
     margin-bottom: 20%;
 }
 
 #contents .organization {
-    font-size: 22px;
+    font-size: 15px;
 
 }
+#contents .teacher {
+    font-size: 11.5px;
+}
+
 #buttons {
     position: absolute;
     display: flex;
@@ -186,7 +174,7 @@ a:hover {
         width: 100%;
     }
     #contents {
-        font-size: 18px;
+        font-size: 15px;
     }
 
     #contents .organization {
