--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(https://graph.baidu.com/pcpage/similar?originSign=1210e50b7853e8c3b373b01626433149&srcp=crs_pc_similar&tn=pc&idctag=tc&sids=10004_10802_10600_10916_10913_11004_10924_10905_10016_10901_10942_10907_11012_10970_10968_10974_11032_12201_17851_17071_18013_18100_19102_17200_17202_18300_18400_18310_18332_18412_19117_19120_19131_19300_19132_19149_19162_19179_19220_19200_19211_19212_19215_19217_19218_19231_19245_9999&logid=3640884201&entrance=general&tpl_from=pc&pageFrom=graph_upload_pcshitu&image=https%3A%2F%2Fgraph.baidu.com%2Fthumb%2Fv4%2F994526082%2C3514453505.jpg&carousel=503&index=0&page=1) no-repeat;
+    background: url(https://p1.ssl.qhimg.com/t01bc46a70f157497e4.png) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
