--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(https://p1.ssl.qhimg.com/t01bc46a70f157497e4.png) no-repeat;
+    background: url(http://pic.616pic.com/bg_w1180/00/00/43/Q4geXkwLDD.jpg!/fw/1120) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
