--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ ul {
 
 .navbar-inverse {
     border: 0 none;
-    background: #021942 none repeat scroll 0 0;
+    background: black none repeat scroll 0 0;
     text-align: center;
 }
 
