--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(https://pixabay.com/get/g73871c8b4b0f39babc1847c4edffb22ba5322d9ce63fc69ed0174637b2ba29d9afda5635e9f7f2fa5cb4fe7c18257f52.jpg?attachment=) no-repeat;
+    background: url(https://img.zcool.cn/community/018eee554351b60000019ae9352bdf.jpg@1280w_1l_2o_100sh.jpg) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
