--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(https://img.zcool.cn/community/018eee554351b60000019ae9352bdf.jpg@1280w_1l_2o_100sh.jpg) no-repeat;
+    background: url(https://ss2.baidu.com/-vo3dSag_xI4khGko9WTAnF6hhy/zhidao/wh%3D450%2C600/sign=81f01545d31b0ef46cbd905ae8f47dec/77c6a7efce1b9d16d8c8c70af2deb48f8c546449.jpg
+) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
