--- a/style.css
+++ b/style.css
@@ -89,12 +89,12 @@ ul {
 
 .navbar-inverse {
     border: 0 none;
-    background: midnightblue none repeat scroll 0 0;
+    background: royalblue none repeat scroll 0 0;
     text-align: center;
 }
 
 .navbar-toggle {
-    background-color: midnightblue !important;
+    background-color: royalblue !important;
 }
 
 .navbar {
