--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ ul {
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-    color: skyblue;
+    color: royalblue;
 }
 
 /*-------*/
