--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: wheat;
+    color: black;
     line-height: 35px;
     padding: 0;
 }
