--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(http://file02.16sucai.com/d/file/2014/1201/1008b9f72a58e853ae8159e66b17e0fc.jpg) no-repeat;
+    background: url(https://img.ixintu.com/download/jpg/202002/f0429fd48496b93356bc2fbc6d70dce9.jpg!con) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
