--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: url(https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fbpic.588ku.com%2Fback_pic%2F05%2F80%2F95%2F795c2f11d5464e8.jpg&refer=http%3A%2F%2Fbpic.588ku.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1629722311&t=d3257d88ca048c800b6bd64b512ad707
-) no-repeat;
+    background: url(https://img1.baidu.com/it/u=1575050147,3047052804&fm=26&fmt=auto&gp=0.jpg) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     color: wheat;
