--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background: url(https://img1.baidu.com/it/u=1575050147,3047052804&fm=26&fmt=auto&gp=0.jpg) no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
-    color: wheat;
+    color: black; /*字体颜色 */
 }
 @media screen and (max-width: 768px) {
     #main {
