--- a/about.css
+++ b/about.css
@@ -14,7 +14,8 @@
     text-align: center;
 }
 #stay-info a {
-    color:wheat;
+   color:black;
+/*     字体颜色 */
 }
 /*#participation-method {
     position: relative;
