--- a/introduction.css
+++ b/introduction.css
@@ -30,7 +30,8 @@
     float: right;
     width: 100%;
     font-size: 15px;
-    color:wheat;
+    color:black;
+/*     从麦色改为黑色 */
     text-align: left;
     line-height: 35px;
     padding-top: 10px;
@@ -49,7 +50,8 @@
     padding-top: 10%;
     width: 80%;
     font-size: 15px;
-    color:wheat;
+    color:black;
+/*     从麦色改为黑色 */
     text-align: left;
     line-height: 40px;
 }
@@ -138,7 +140,8 @@
 }
 
 a:hover {
-    color:  wheat;
+    color:  black;
+/*     从麦色改为黑色 */
 }
 
 @media screen and (max-width: 1200px) and (min-width: 992px) {
